--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   dio: ^5.7.0
   graphql_flutter: ^5.1.2
   hive: ^2.2.3
-  google_sign_in: ^6.2.2
+  # google_sign_in: ^6.2.2
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   marquee: ^2.3.0
