--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<!-- BUNDLE CONFIGURATION -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Cloudnottapp2</string>
+	<string>Cloudnotte</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +14,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>cloudnottapp2</string>
+	<string>cloudnotte</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,28 +23,166 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	
+	<!-- locale  -->
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>fr</string>
+		<!-- Add all the languages you support -->
+	</array>
+
+	<!-- GOOGLE SIGN-IN CONFIGURATION -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.455997009052-p4ha85i504d5af0js4tpjfrrvrhm5p3a</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>455997009052-p4ha85i504d5af0js4tpjfrrvrhm5p3a.apps.googleusercontent.com</string>
+
+	<!-- APP TRANSPORT SECURITY -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<!-- Consider being more restrictive in production -->
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>your-api-domain.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.0</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+
+	<!-- ENCRYPTION COMPLIANCE -->
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+
+	<!-- DEVICE REQUIREMENTS -->
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<!-- URL SCHEMES FOR EXTERNAL APPS -->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+		<string>http</string>
+		<string>googlechrome</string>
+		<string>googlechromes</string>
+		<string>googlechrome-x-callback</string>
+		<string>googlegmail</string>
+	</array>
+
+	<!-- PRIVACY PERMISSIONS -->
+	<!-- Camera and Microphone -->
+	<key>NSCameraUsageDescription</key>
+	<string>Camera access is needed for video calls, taking photos, and file uploads within the app.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone access is needed for audio recording and video calls within the app.</string>
+
+	<!-- Photo Library -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo library access is required for selecting and uploading images and documents.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Photo library access is required for saving screenshots and exported files.</string>
+
+	<!-- File System Access -->
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Document access is required to select files for upload and export academic results.</string>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string>File access is needed for document management and academic file operations.</string>
+
+	<!-- Location Services (Optional - remove if not needed) -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location access may be used to enhance your learning experience with location-based features.</string>
+	<!-- Removed NSLocationAlwaysAndWhenInUseUsageDescription as it's rarely needed and scrutinized by Apple -->
+
+	<!-- Bluetooth (Optional - remove if not needed) -->
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Bluetooth access is needed for connecting to external audio devices during video calls.</string>
+
+	<!-- Network Access (for WebRTC/LiveKit) -->
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Local network access is needed for peer-to-peer video calls and real-time communication features.</string>
+
+	<!-- UI CONFIGURATION -->
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<false/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+
+	<!-- LAUNCH CONFIGURATION -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+
+	<!-- ORIENTATION SUPPORT -->
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+
+	<!-- BACKGROUND MODES - Only include what you actually use -->
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>remote-notification</string>
+		<!-- Removed 'fetch' and 'processing' - only add these if you have proper background task implementation -->
+	</array>
+
+	<!-- BACKGROUND TASK IDENTIFIERS - Only if you implement background processing -->
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.cloudnotte.refresh</string>
+		<!-- Only include identifiers you actually register and use -->
+	</array>
+
+	<!-- PERFORMANCE OPTIMIZATIONS -->
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+
+	<!-- SCENE CONFIGURATION (if using SceneDelegate) -->
+	<key>UISceneDelegate</key>
+	<dict>
+		<key>UISceneConfiguration</key>
+		<array>
+			<dict>
+				<key>UISceneConfigurationName</key>
+				<string>Default Configuration</string>
+				<key>UISceneDelegateClassName</key>
+				<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+			</dict>
+		</array>
+	</dict>
+
+	<!-- PREVENT SCREENSHOTS IN APP SWITCHER (Optional - for security) -->
+	<!-- Uncomment if you want to hide app content in app switcher -->
+	<!--
+	<key>UIApplicationExitsOnSuspend</key>
+	<false/>
+	-->
 </dict>
 </plist>
