--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   provider: ^6.1.2
   # flutter_webrtc: ^0.12.1+hotfix.1
-  flutter_webrtc: ^0.14.1
+  # flutter_webrtc: ^0.14.1
   socket_io_client: ^3.0.0
   flutter_background: ^1.3.0+1
   permission_handler: ^11.3.1
