--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,8 @@ dependencies:
   graphql_flutter: ^5.1.2
   hive: ^2.2.3
   # google_sign_in: ^6.2.2
-  firebase_core: ^3.13.0
-  firebase_auth: ^5.5.3
+  # firebase_core: ^3.13.0
+  # firebase_auth: ^5.5.3
   marquee: ^2.3.0
 
   date_time: ^0.12.0
